--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "url": "https://github.com/Carl-Hugo/types-roll20/issues"
     },
     "homepage": "https://github.com/Carl-Hugo/types-roll20#readme",
-    "devDependencies": {
-        "@types/cheerio": "0.22.0"
-    }
+    "devDependencies": {},
+    "dependencies": {}
 }
