--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@types/roll20",
-  "version": "1.1.1",
+  "name": "types-roll20",
+  "version": "1.1.2",
   "description": "Roll20 type definition",
   "repository": {
     "type": "git",
