--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -22,6 +22,7 @@ jobs:
         id: nbgv
         with:
           stamp: package.json
+          PublicRelease: ${{ github.event_name == 'push' }}
 
       - name: Setup node
         uses: actions/setup-node@v1
