--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/Carl-Hugo/types-roll20#readme",
   "peerDependencies": {
     "typescript": ">= 4.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.0-beta"
   }
 }
